compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__externals__javascript_only_constant.snap
---
source: compiler-core/src/type_/tests/externals.rs
expression: "import module\npub fn main() {\n  module.javascript_only_constant()\n}"
---
----- SOURCE CODE
-- module.gleam
@external(javascript, "one", "two")
fn javascript_only() -> Int
const constant = javascript_only
pub const javascript_only_constant = constant


-- main.gleam
import module
pub fn main() {
  module.javascript_only_constant()
}

----- ERROR
error: Unsupported target
  ┌─ /src/one/two.gleam:3:10
  │
3 │   module.javascript_only_constant()
  │          ^^^^^^^^^^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
